# megalinter

./: .cspell.json  .secretlintignore  .trivyignore  CHANGELOG.md  Dockerfile  Dockerfile-quick  README.md  build.sh  entrypoint.sh  mkdocs.yml  newindex.html  oldindex.html  plugin.py  pyproject.toml  renovate.json5  requirements.dev.txt
.automation/: build.py
.config/gitpod/: Dockerfile
.config/make/: python.mak
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: auto-update-linters.yml  build-command.yml  build-deploy-docs.yml  deploy-BETA-linters.yml  deploy-BETA.yml  deploy-DEV-linters.yml  deploy-DEV.yml  deploy-RELEASE.yml  help-command.yml  mega-linter.yml  slash-command-dispatch.yml  test-mkdocs.yml
TEMPLATES/: mega-linter.yml
docs/: all_linters.md  used-by-stats.md
docs/descriptors/: bash_shellcheck.md  cloudformation_cfn_lint.md  dart_dartanalyzer.md  javascript_prettier.md  json_prettier.md  kubernetes_kubeconform.md  kubernetes_kubeval.md  markdown_markdown_link_check.md  powershell.md  powershell_powershell.md  salesforce_lightning_flow_scanner.md  salesforce_sfdx_scanner_apex.md  salesforce_sfdx_scanner_aura.md  salesforce_sfdx_scanner_lwc.md  snakemake_snakemake.md  spell_vale.md  typescript_prettier.md  yaml_prettier.md
flavors/c_cpp/: Dockerfile
flavors/ci_light/: Dockerfile  flavor.json
flavors/cupcake/: Dockerfile
flavors/documentation/: Dockerfile  flavor.json
flavors/dotnet/: Dockerfile  flavor.json
flavors/dotnetweb/: Dockerfile
flavors/formatters/: Dockerfile
flavors/go/: Dockerfile  flavor.json
flavors/java/: Dockerfile  flavor.json
flavors/javascript/: Dockerfile  flavor.json
flavors/php/: Dockerfile  flavor.json
flavors/python/: Dockerfile  action.yml  flavor.json
flavors/ruby/: Dockerfile  flavor.json
flavors/rust/: Dockerfile  flavor.json
flavors/salesforce/: Dockerfile  flavor.json
flavors/security/: Dockerfile  flavor.json
flavors/swift/: Dockerfile  flavor.json
flavors/terraform/: Dockerfile  flavor.json
linters/action_actionlint/: Dockerfile
linters/ansible_ansible_lint/: Dockerfile
linters/api_spectral/: Dockerfile
linters/arm_arm_ttk/: Dockerfile
linters/bash_exec/: Dockerfile
linters/bash_shellcheck/: Dockerfile
linters/bash_shfmt/: Dockerfile
linters/bicep_bicep_linter/: Dockerfile
linters/c_clang_format/: Dockerfile
linters/c_cppcheck/: Dockerfile
linters/c_cpplint/: Dockerfile
linters/clojure_clj_kondo/: Dockerfile
linters/clojure_cljstyle/: Dockerfile
linters/cloudformation_cfn_lint/: Dockerfile
linters/coffee_coffeelint/: Dockerfile
linters/copypaste_jscpd/: Dockerfile
linters/cpp_clang_format/: Dockerfile
linters/cpp_cppcheck/: Dockerfile
linters/cpp_cpplint/: Dockerfile
linters/csharp_csharpier/: Dockerfile
linters/csharp_dotnet_format/: Dockerfile
linters/csharp_roslynator/: Dockerfile
linters/css_scss_lint/: Dockerfile
linters/css_stylelint/: Dockerfile
linters/dart_dartanalyzer/: Dockerfile
linters/dockerfile_hadolint/: Dockerfile
linters/editorconfig_editorconfig_checker/: Dockerfile
linters/env_dotenv_linter/: Dockerfile
linters/gherkin_gherkin_lint/: Dockerfile
linters/go_golangci_lint/: Dockerfile
linters/go_revive/: Dockerfile
linters/graphql_graphql_schema_linter/: Dockerfile
linters/groovy_npm_groovy_lint/: Dockerfile
linters/html_djlint/: Dockerfile
linters/html_htmlhint/: Dockerfile
linters/java_checkstyle/: Dockerfile
linters/java_pmd/: Dockerfile
linters/javascript_es/: Dockerfile
mega-linter-runner/: package.json
megalinter/: MegaLinter.py  constants.py  flavor_factory.py  linter_factory.py
server/: Dockerfile  Dockerfile-dev
site/: index.html
(+123 files in other folders)
